[project]
name = "vidtoolz-denoise"
version = "0.1.0"
description = "Denoise audio in a video"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-denoise"
Changelog = "https://github.com/sukhbinder/vidtoolz-denoise/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-denoise/issues"
CI = "https://github.com/sukhbinder/vidtoolz-denoise/actions"

[project.entry-points."vidtoolz_plugins"]
denoise = "vidtoolz_denoise:denoise_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
